# pyssas-deploy

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  SSAS_COMPATIBILITY.md  pyproject.toml  setup.py
examples/: sample_model.bim  usage_example.py
pyssas_deploy/: __init__.py  cli.py  deploy.py
scripts/: Configure-SSASHttpAccess.ps1  README.md
tests/: test_deploy.py
