[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyssas-deploy"
version = "0.1.0"
description = "Platform-agnostic Python tool for deploying .bim files to SSAS servers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Axell Padilla" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/axellpadilla/pyssas-deploy"
Repository = "https://github.com/axellpadilla/pyssas-deploy"

[project.scripts]
pyssas-deploy = "pyssas_deploy.cli:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["pyssas_deploy"]
